WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289676
MediaRecorder fetch data callback can take a Ref instead of a RefPtr buffer
https://bugs.webkit.org/show_bug.cgi?id=289676
Summary
MediaRecorder fetch data callback can take a Ref instead of a RefPtr buffer
youenn fablet
Reported
2025-03-13 00:17:27 PDT
MediaRecorder fetch data callback can take a Ref instead of a RefPtr buffer
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-03-13 00:17:46 PDT
<
rdar://problem/146927542
>
EWS
Comment 2
2025-03-13 02:33:09 PDT
Committed
292073@main
(8b9e746104ca): <
https://commits.webkit.org/292073@main
> Reviewed commits have been landed. Closing PR #42376 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug