Source/WebCore/Modules/mediarecorder/MediaRecorder.cpp
@@ -225,7 +225,7 @@ void MediaRecorder::stopRecording()
     updateBitRates();
 
     stopRecordingInternal();
-    fetchData([this](RefPtr<FragmentedSharedBuffer>&& buffer, auto& mimeType, auto timeCode) {
+    fetchData([this](Ref<FragmentedSharedBuffer>&& buffer, auto& mimeType, auto timeCode) {
         if (!m_isActive)
             return;
 
@@ -254,12 +254,6 @@ ExceptionOr<void> MediaRecorder::requestDataInternal(ReturnDataIfEmpty returnDat
     fetchData([this, returnDataIfEmpty](auto&& buffer, auto& mimeType, auto timeCode) {
         if (!m_isActive)
             return;
-
-        //  As per W3C spec, if no data has been captured, the MediaRecorder will still fire the dataavailable event, but the Blob associated with that event will be empty.
-        if (!buffer) {
-            dispatchEvent(createDataAvailableEvent(scriptExecutionContext(), { }, { }, timeCode));
-            return;
-        }
 
         if (returnDataIfEmpty == ReturnDataIfEmpty::Yes || !buffer->isEmpty())
             dispatchEvent(createDataAvailableEvent(scriptExecutionContext(), WTFMove(buffer), mimeType, timeCode));
@@ -343,7 +337,7 @@ void MediaRecorder::fetchData(FetchDataCallback&& callback, TakePrivateRecorder 
     if (takeRecorder == TakePrivateRecorder::Yes)
         takenPrivateRecorder = WTFMove(m_private);
 
-    auto fetchDataCallback = [this, privateRecorder = WTFMove(takenPrivateRecorder), callback = WTFMove(callback)](RefPtr<FragmentedSharedBuffer>&& buffer, auto& mimeType, auto timeCode) mutable {
+    auto fetchDataCallback = [this, privateRecorder = WTFMove(takenPrivateRecorder), callback = WTFMove(callback)](Ref<FragmentedSharedBuffer>&& buffer, auto& mimeType, auto timeCode) mutable {
         queueTaskKeepingObjectAlive(*this, TaskSource::Networking, [buffer = WTFMove(buffer), mimeType, timeCode, callback = WTFMove(callback)](auto&) mutable {
             callback(WTFMove(buffer), mimeType, timeCode);
         });
@@ -355,11 +349,11 @@ void MediaRecorder::fetchData(FetchDataCallback&& callback, TakePrivateRecorder 
     }
 
     m_isFetchingData = true;
-    privateRecorder.fetchData([this, pendingActivity = makePendingActivity(*this), callback = WTFMove(fetchDataCallback)](RefPtr<FragmentedSharedBuffer>&& buffer, auto& mimeType, auto timeCode) mutable {
+    privateRecorder.fetchData([this, pendingActivity = makePendingActivity(*this), callback = WTFMove(fetchDataCallback)](Ref<FragmentedSharedBuffer>&& buffer, auto& mimeType, auto timeCode) mutable {
         m_isFetchingData = false;
         callback(WTFMove(buffer), mimeType, timeCode);
         for (auto& task : std::exchange(m_pendingFetchDataTasks, { }))
-            task({ }, mimeType, timeCode);
+            task(FragmentedSharedBuffer::create(), mimeType, timeCode);
     });
 }
 
